Styling for posts index and show page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,30 @@
-@import "bootstrap-sprockets";
 @import "bootstrap";
+
+.navbar {
+  margin-bottom: 0;
+}
+
+.navbar .nav > li > a.brand {
+  padding-left: 0;
+}
+
+.quiet {
+  color: #ababab;
+}
+
+div.nav_item {
+  margin-left: 25px;
+  float: left;
+}
+
+.label  {
+  a, a:hover, a:focus {
+    color: #fff;
+    text-decoration: none;
+  }
+}
+
+div.comment_votes {
+  padding: 10px;
+}
+
