--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -12,7 +12,7 @@
         %li
           = link_to 'New Post', new_post_path
         %li
-          %a{:href => "#"} Link
+          = link_to 'New Category', new_category_path
       %ul.nav.navbar-nav.navbar-right
         %li
           %a{:href => "#"} Link
