Start of authentication implementation

--- a/app/assets/stylesheets/post.scss
+++ b/app/assets/stylesheets/post.scss
@@ -2,11 +2,10 @@
   margin: 10px 0;
 }
 
-#post-form-bkgnd {
-  background-color: #5bc0de;
-  color: #fff;
-}
-
 textarea {
   resize: none;
+}
+
+#checkboxes {
+  display: inline;
 }
