--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,31 +1,31 @@
 = render 'shared/errors', obj: @post
-
 = form_for @post do |f|
-  .col-lg-6
-    .row
-      .col-lg-12
-        .form-input
-          = f.label :title
-          = f.text_field :title, class: 'form-control'
-    .row
-      .col-lg-12
-        .form-input
-          = f.label :url
-          = f.text_field :url, class: 'form-control'
-    .row
-      .col-lg-12
-        .form-input
-          = f.label :description
-          = f.text_area :description, class: 'form-control'
-    .row
-      .col-lg-12
-        = f.label "Categories"
-        %br/
-        = f.collection_check_boxes :category_ids, Category.all, :id, :name do |cat|
-          .form-input#checkboxes
-            = cat.check_box
-            = cat.label
-    .row
-      .col-lg-12
-        .form-input
-          = f.submit(@post.new_record? ? 'Create Post' : 'Update Post', class: 'btn btn-primary')
+  .well
+    .container
+      .row
+        .col-sm-8.col-md-6
+          .form-input
+            = f.label :title
+            = f.text_field :title, class: 'form-control'
+      .row
+        .col-sm-8.col-md-6
+          .form-input
+            = f.label :url
+            = f.text_field :url, class: 'form-control'
+      .row
+        .col-sm-8.col-md-6
+          .form-input
+            = f.label :description
+            = f.text_area :description, class: 'form-control'
+      .row
+        .col-sm-8.col-md-6
+          = f.label "Categories"
+          %br/
+          = f.collection_check_boxes :category_ids, Category.all, :id, :name do |cat|
+            .form-input#checkboxes
+              = cat.check_box
+              = cat.label
+      .row
+        .col-sm-8.col-md-6
+          .form-input
+            = f.submit(@post.new_record? ? 'Create Post' : 'Update Post', class: 'btn btn-primary')
