--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,16 +1,17 @@
-.row
-  .col-lg-8.well
-    = render post.categories
-    %h4
-      = link_to post.title, url_helper(post.url)
-    %p
-      = post.description
-    %p
-      %span.quiet
-        posted by
-      = post.creator.username
-      %small
-        on
-        = date_helper(post.created_at)
-    %span
-      = link_to("#{post.comments.size} comments", post_path(post))
+.container-fluid
+  .row
+    .col-lg-8.well
+      = render post.categories
+      %h4
+        = link_to post.title, url_helper(post.url)
+      %p
+        = post.description
+      %p
+        %span.quiet
+          posted by
+        = link_to post.creator.username, user_path(post.creator)
+        %small
+          on
+          = date_helper(post.created_at)
+      %span
+        = link_to("#{post.comments.size} comments", post_path(post))
