--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -9,10 +9,31 @@
       = link_to 'Redditor', root_path, class: 'navbar-brand'
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav
-        %li
-          = link_to 'New Post', new_post_path
-        %li
-          = link_to 'New Category', new_category_path
-      %ul.nav.navbar-nav.navbar-right
-        %li
-          %a{:href => "#"} Link
+        %li.dropdown
+          %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+            Categories
+            %span.caret
+          %ul.dropdown-menu
+            - Category.all.each do |category|
+              %li
+                = link_to category.name, category_path(category)
+
+        - if logged_in?
+          %li
+            = link_to 'New Post', new_post_path, class: 'btn btn-success btn-sm', id: 'new-post-btn'
+          %li.dropdown
+            %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+              = current_user.username
+              %span.caret
+            %ul.dropdown-menu
+              %li
+                = link_to 'Edit Profile', edit_user_path(current_user)
+              %li
+                = link_to 'View Profile', user_path(current_user)
+              %li
+                = link_to 'Log out', logout_path
+        - else
+          %li
+            = link_to 'Log in', login_path
+          %li
+            = link_to 'Register', register_path, class: 'btn btn-success btn-sm'
