--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     = csrf_meta_tags
   %body
     = render 'shared/header'
+    = render 'shared/messages'
     .container
       = yield
       = javascript_include_tag "application"
