--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,13 +1,16 @@
 .container-fluid
   .row
     .col-xs-4.col-lg-2.well.text-center
-      = link_to vote_post_path(post, vote: true), method: 'post' do
-        = fa_icon "arrow-up", class: "fa-2x"
-      %h4
-        #{post.total_votes} votes
-
-      = link_to vote_post_path(post, vote: false), method: 'post' do
-        = fa_icon "arrow-down", class: "fa-2x"
+      - if logged_in?
+        = link_to vote_post_path(post, vote: true), method: 'post' do
+          = fa_icon "arrow-up", class: "fa-2x"
+        %h4
+          #{post.total_votes} votes
+        = link_to vote_post_path(post, vote: false), method: 'post' do
+          = fa_icon "arrow-down", class: "fa-2x"
+      - else
+        %h4
+          #{post.total_votes} votes
 
     .col-xs-1
 
